<resources>
    <string name="app_name">Quizz</string>
    <string name="name">GoQuizz</string>
    <string name="rule">
        Chào mừng bạn đến với trò chơi GoQuiz.\nTrong trò chơi này bạn sẽ trả lời các câu hỏi theo các chủ đề: Toán học, Văn học, Địa lý, Lịch sử, Khoa học,…\nBạn có thể trả lời câu hỏi ở 2 cấp độ là Dễ và Khó. Với cấp độ dễ, mỗi câu trả lời đúng bạn sẽ được 1 điểm, còn với cấp độ khó thì sẽ là 2 điểm.\nThành tích của bạn giữa các lần chơi sẽ được lưu lại.\nHãy cố gắng đạt thành tích cao nhất có thể và chia sẻ nó với bạn bè của mình nhé!
    </string>
    <string name="start">Start</string>
    <string name="score">Total Score</string>
    <string name="init_score">0 pts</string>
    <string name="topic_name">Topic Name</string>
    <string name="description">This is the description of the topic</string>
    <string name="mode">Cấp độ khó</string>
    <string name="question_list">Danh sách câu hỏi</string>
    <string name="question">Đây là câu hỏi, hãy lựa chọn 1 trong 4 đáp án bên dưới</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="answer_btn">Trả lời</string>
    <string name="correct_answer">Số câu trả lời đúng</string>
    <string name="number">0</string>
    <string name="finish">Hoàn thành</string>
    <string name="play_again">Chơi lại</string>
    <string name="topic">Chủ đề</string>
    <string name="share">Chia sẻ thành tích</string>
    <string name="hard">Khó</string>
    <string name="hint">Đáp án đúng: ###</string>
    <string-array name="topicItems">
        <item name="math">Toán học</item>
        <item name="science">Khoa học</item>
        <item name="literature">Văn học</item>
        <item name="geography">Địa lý</item>
    </string-array>
</resources>