<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF8F8"
    tools:context=".MainActivity6">

    <TextView
        android:id="@+id/questionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="48dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modeView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#F44336"
        android:text="@string/hard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionView" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option1"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeView" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option2"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option3"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option4"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/hint"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer4" />
</androidx.constraintlayout.widget.ConstraintLayout>